--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:padding="16dp">
 
             <ImageView
-                android:id="@+id/sharepost"
+                android:id="@+id/setting_button"
                 android:layout_width="29dp"
                 android:layout_height="29dp"
                 android:layout_alignParentEnd="true"
@@ -41,6 +42,11 @@
         </RelativeLayout>
 
     </androidx.appcompat.widget.Toolbar>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/CLpost"
+        app:layout_constraintTop_toBottomOf="@+id/TBMainAct3">
 
     <ImageView
         android:id="@+id/imageView"
@@ -49,7 +55,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TBMainAct3"
+        app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -201,5 +207,17 @@
         android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_added" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#e6e6fa"
+        app:menu="@menu/bottom_navbar"
+        app:itemIconTint="@drawable/selector"
+        android:layout_alignParentBottom="true"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
