--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#E6E6FA</color>
     <color name="orange">#EF6C00</color>
+    <color name="grey">#787882</color>
 </resources>
