--- a/app/src/main/res/layout/activity_add_meal.xml
+++ b/app/src/main/res/layout/activity_add_meal.xml
@@ -50,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:inputType="text"
         android:layout_marginTop="25dp"
         android:gravity="center"
         android:hint="Meal" />
