--- a/app/src/main/res/navigation/navprofile.xml
+++ b/app/src/main/res/navigation/navprofile.xml
@@ -14,7 +14,7 @@
         android:id="@+id/post"
         android:name="com.example.madchef.post"
         android:label="fragment_post"
-        tools:layout="@layout/fragment_post" />
+        tools:layout="@layout/activity_post" />
     <fragment
         android:id="@+id/aboutUser"
         android:name="com.example.madchef.AboutUser"
