--- a/app/src/main/res/layout/activity_aboutuser.xml
+++ b/app/src/main/res/layout/activity_aboutuser.xml
@@ -40,10 +40,12 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/profilefrag"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/TBMainAct"
+        android:layout_marginTop="-30dp"
         android:layout_weight="1"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/navprofile"/>
+        app:navGraph="@navigation/navprofile" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_view"
