--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -145,10 +145,23 @@
             android:id="@+id/saveBtn"
             android:layout_width="127dp"
             android:layout_height="54dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="12dp"
-            android:layout_marginEnd="140dp"
             android:backgroundTint="#9999E4"
             android:text="save changes"
+            android:textSize="14sp"
+            app:cornerRadius="50dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editPwd" />
+
+        <Button
+            android:id="@+id/deleteBtn"
+            android:layout_width="127dp"
+            android:layout_height="54dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="40dp"
+            android:backgroundTint="#9999E4"
+            android:text="Delete Account"
             android:textSize="14sp"
             app:cornerRadius="50dp"
             app:layout_constraintEnd_toEndOf="parent"
