--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -77,10 +77,10 @@
         android:layout_marginStart="156dp"
         android:layout_marginTop="30dp"
         android:background="#D9D9D9"
-        android:padding="25dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider"
-        app:srcCompat="@drawable/img" />
+        app:srcCompat="@drawable/cameraimg" />
 
     <EditText
         android:id="@+id/ETTool"
@@ -165,7 +165,7 @@
         android:layout_marginTop="13dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Write a caption or Recipe..."
+        android:hint="Write a caption or Recipe..."
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
