--- a/app/src/main/res/layout/activity_community.xml
+++ b/app/src/main/res/layout/activity_community.xml
@@ -41,13 +41,13 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="0dp"
-                android:padding="10dp"
                 android:orientation="vertical"
+                android:padding="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
-                    android:id="@+id/RecipePostTitle"
+                    android:id="@+id/RecipePostTitle1"
                     style="?attr/borderlessButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                     android:marqueeRepeatLimit="marquee_forever"
                     android:scrollHorizontally="true"
                     android:singleLine="true"
-                    android:text="Jisoo Kim"
+                    android:text="Gordon Ramsey"
                     android:textAlignment="textStart"
                     android:textAllCaps="false"
                     android:textColor="@color/black"
@@ -83,8 +83,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:textColor="@color/black"
-                        android:text="Just tried cooking this dish \n \n#DishbyGordonRamsay\n#Delicious"/>
+                        android:text="Just tried cooking this dish \n \n#DishbyGordonRamsay\n#Delicious"
+                        android:textColor="@color/black" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -100,9 +100,18 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/whiteheart1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_like" />
+
+                        <ImageView
+                            android:id="@+id/redheart1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-24dp"
+                            android:src="@drawable/ic_like"
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/RecipeDuration"
@@ -117,12 +126,12 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/comment"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        android:id="@+id/comment">
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="wrap_content"
@@ -234,9 +243,18 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/whiteheart2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_like" />
+
+                        <ImageView
+                            android:id="@+id/redheart2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-24dp"
+                            android:src="@drawable/ic_like"
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/RecipeDuration2"
@@ -367,9 +385,18 @@
                         android:orientation="vertical">
 
                         <ImageView
+                            android:id="@+id/whiteheart3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_like" />
+
+                        <ImageView
+                            android:id="@+id/redheart3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-24dp"
+                            android:src="@drawable/ic_like"
+                            android:visibility="gone" />
 
                         <TextView
                             android:id="@+id/RecipeDuration3"
